[package]
name = "ezsp-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield-struct = "0.6.0"
futures-core = "0.3.30"
log = "0.4"
# 'default-features = false' takes away some details of port enumeration, and doesn't require 'udev' installation on Linux.
serialport = { version = "4.3", default-features = false }
# Bringing 'some' as a git submodule since it's so small and likely not going to change.
some = { path = "lib/rust_some" }
#or-bust = { path = "lib/or_bust" }

[dev-dependencies]
anyhow = "1.0"
env_logger = "0.11"
#futures = "0.3.30"
futures-executor = "0.3.30"
rand = "=0.8"
